[gd_scene load_steps=2 format=2]

[ext_resource path="res://calc.gd" type="Script" id=1]

[node name="calc" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 514.0
margin_bottom = 100.0
color = Color( 0.129412, 0.12549, 0.12549, 1 )

[node name="Display" type="Label" parent="ColorRect"]
margin_right = 514.0
margin_bottom = 100.0
align = 2
valign = 1
autowrap = true

[node name="Internal" type="Label" parent="ColorRect"]
margin_right = 513.0
margin_bottom = 37.0
valign = 1

[node name="Output" type="Label" parent="ColorRect"]
margin_right = 40.0
margin_bottom = 14.0

[node name="Buttons" type="Control" parent="."]
margin_left = 253.0
margin_top = 101.0
margin_right = 287.0
margin_bottom = 135.0
rect_pivot_offset = Vector2( 152, 81 )
__meta__ = {
"_edit_group_": true
}

[node name="LeftBracket" type="Button" parent="Buttons" groups=["left_p"]]
margin_left = -252.0
margin_right = -188.0
margin_bottom = 64.0
text = "{"

[node name="Log" type="Button" parent="Buttons" groups=["func"]]
margin_left = -252.0
margin_top = 64.0
margin_right = -188.0
margin_bottom = 128.0
text = "Log10"

[node name="Sin" type="Button" parent="Buttons" groups=["func"]]
margin_left = -252.0
margin_top = 128.0
margin_right = -188.0
margin_bottom = 192.0
text = "Sin"

[node name="Tan" type="Button" parent="Buttons" groups=["func"]]
margin_left = -252.0
margin_top = 192.0
margin_right = -188.0
margin_bottom = 256.0
text = "Tan"

[node name="RightBracket" type="Button" parent="Buttons" groups=["right_p"]]
margin_left = -188.0
margin_right = -124.0
margin_bottom = 64.0
text = "}"

[node name="Ln" type="Button" parent="Buttons" groups=["func"]]
margin_left = -188.0
margin_top = 64.0
margin_right = -124.0
margin_bottom = 128.0
text = "Ln"

[node name="Cos" type="Button" parent="Buttons" groups=["func"]]
margin_left = -188.0
margin_top = 128.0
margin_right = -124.0
margin_bottom = 192.0
text = "Cos"

[node name="Cot" type="Button" parent="Buttons" groups=["func"]]
margin_left = -188.0
margin_top = 192.0
margin_right = -124.0
margin_bottom = 256.0
text = "Cot"

[node name="7" type="Button" parent="Buttons" groups=["num"]]
margin_left = -124.0
margin_right = -60.0
margin_bottom = 64.0
text = "7"

[node name="4" type="Button" parent="Buttons" groups=["num"]]
margin_left = -124.0
margin_top = 64.0
margin_right = -60.0
margin_bottom = 128.0
text = "4"

[node name="1" type="Button" parent="Buttons" groups=["num"]]
margin_left = -124.0
margin_top = 128.0
margin_right = -60.0
margin_bottom = 192.0
text = "1"

[node name="Negative" type="Button" parent="Buttons" groups=["unary"]]
margin_left = -124.0
margin_top = 192.0
margin_right = -60.0
margin_bottom = 256.0
text = "+/-"

[node name="8" type="Button" parent="Buttons" groups=["num"]]
margin_left = -60.0
margin_right = 4.0
margin_bottom = 64.0
text = "8"

[node name="5" type="Button" parent="Buttons" groups=["num"]]
margin_left = -60.0
margin_top = 64.0
margin_right = 4.0
margin_bottom = 128.0
text = "5"

[node name="2" type="Button" parent="Buttons" groups=["num"]]
margin_left = -60.0
margin_top = 128.0
margin_right = 4.0
margin_bottom = 192.0
text = "2"

[node name="0" type="Button" parent="Buttons" groups=["num"]]
margin_left = -60.0
margin_top = 192.0
margin_right = 4.0
margin_bottom = 256.0
text = "0"

[node name="9" type="Button" parent="Buttons" groups=["num"]]
margin_left = 4.0
margin_right = 68.0
margin_bottom = 64.0
text = "9"

[node name="6" type="Button" parent="Buttons" groups=["num"]]
margin_left = 4.0
margin_top = 64.0
margin_right = 68.0
margin_bottom = 128.0
text = "6"

[node name="3" type="Button" parent="Buttons" groups=["num"]]
margin_left = 4.0
margin_top = 128.0
margin_right = 68.0
margin_bottom = 192.0
text = "3"

[node name="Decimal" type="Button" parent="Buttons" groups=["decimal"]]
margin_left = 4.0
margin_top = 192.0
margin_right = 68.0
margin_bottom = 256.0
text = "."

[node name="LeftParen" type="Button" parent="Buttons" groups=["left_p"]]
margin_left = 68.0
margin_right = 132.0
margin_bottom = 64.0
text = "("

[node name="Divide" type="Button" parent="Buttons" groups=["binary"]]
margin_left = 68.0
margin_top = 64.0
margin_right = 132.0
margin_bottom = 128.0
text = "/"

[node name="Subtract" type="Button" parent="Buttons" groups=["binary", "sub"]]
margin_left = 68.0
margin_top = 128.0
margin_right = 132.0
margin_bottom = 192.0
text = "-"

[node name="Exponent" type="Button" parent="Buttons" groups=["binary"]]
margin_left = 68.0
margin_top = 192.0
margin_right = 132.0
margin_bottom = 256.0
text = "^"

[node name="RightParen" type="Button" parent="Buttons" groups=["right_p"]]
margin_left = 132.0
margin_right = 196.0
margin_bottom = 64.0
text = ")"

[node name="Multiply" type="Button" parent="Buttons" groups=["binary"]]
margin_left = 132.0
margin_top = 64.0
margin_right = 196.0
margin_bottom = 128.0
text = "*"

[node name="Add" type="Button" parent="Buttons" groups=["binary"]]
margin_left = 132.0
margin_top = 128.0
margin_right = 196.0
margin_bottom = 192.0
text = "+"

[node name="Clear" type="Button" parent="Buttons" groups=["clear"]]
margin_left = 196.0
margin_right = 260.0
margin_bottom = 192.0
text = "Clear"

[node name="Equal" type="Button" parent="Buttons" groups=["equal"]]
margin_left = 132.0
margin_top = 192.0
margin_right = 260.0
margin_bottom = 256.0
text = "="

[connection signal="button_down" from="Buttons/LeftBracket" to="." method="_on_LeftBracket_button_down"]
[connection signal="button_down" from="Buttons/Log" to="." method="_on_Log_button_down"]
[connection signal="button_down" from="Buttons/Sin" to="." method="_on_Sin_button_down"]
[connection signal="button_down" from="Buttons/Tan" to="." method="_on_Tan_button_down"]
[connection signal="button_down" from="Buttons/RightBracket" to="." method="_on_RightBracket_button_down"]
[connection signal="button_down" from="Buttons/Ln" to="." method="_on_Ln_button_down"]
[connection signal="button_down" from="Buttons/Cos" to="." method="_on_Cos_button_down"]
[connection signal="button_down" from="Buttons/Cot" to="." method="_on_Cot_button_down"]
[connection signal="button_down" from="Buttons/7" to="." method="_on_7_button_down"]
[connection signal="button_down" from="Buttons/4" to="." method="_on_4_button_down"]
[connection signal="button_down" from="Buttons/1" to="." method="_on_1_button_down"]
[connection signal="button_down" from="Buttons/Negative" to="." method="_on_Negative_button_down"]
[connection signal="button_down" from="Buttons/8" to="." method="_on_8_button_down"]
[connection signal="button_down" from="Buttons/5" to="." method="_on_5_button_down"]
[connection signal="button_down" from="Buttons/2" to="." method="_on_2_button_down"]
[connection signal="button_down" from="Buttons/0" to="." method="_on_0_button_down"]
[connection signal="button_down" from="Buttons/9" to="." method="_on_9_button_down"]
[connection signal="button_down" from="Buttons/6" to="." method="_on_6_button_down"]
[connection signal="button_down" from="Buttons/3" to="." method="_on_3_button_down"]
[connection signal="button_down" from="Buttons/Decimal" to="." method="_on_Decimal_button_down"]
[connection signal="button_down" from="Buttons/LeftParen" to="." method="_on_LeftParen_button_down"]
[connection signal="button_down" from="Buttons/Divide" to="." method="_on_Divide_button_down"]
[connection signal="button_down" from="Buttons/Subtract" to="." method="_on_Subtract_button_down"]
[connection signal="button_down" from="Buttons/Exponent" to="." method="_on_Exponent_button_down"]
[connection signal="button_down" from="Buttons/RightParen" to="." method="_on_RightParen_button_down"]
[connection signal="button_down" from="Buttons/Multiply" to="." method="_on_Multiply_button_down"]
[connection signal="button_down" from="Buttons/Add" to="." method="_on_Add_button_down"]
[connection signal="button_down" from="Buttons/Clear" to="." method="_on_Clear_button_down"]
[connection signal="button_down" from="Buttons/Equal" to="." method="_on_Equal_button_down"]
